--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   "dependencies": {
     "eval": "0.1.1",
     "fetch": "0.3.6",
-    "loader-utils": "0.2.12",
+    "loader-utils": "^1.1.0",
     "lodash": "3.10.1",
     "mocha": "2.3.4",
-    "react-templates": "0.3.2",
+    "react-templates": "0.4.4",
     "sync-request": "2.1.0"
   },
   "devDependencies": {
     "react": "0.13.3",
     "shelljs": "0.5.3",
-    "webpack": "1.12.9"
+    "webpack": "^3.8.1"
   }
 }
